# gfx-simple-cube-example

./: Cargo.toml  README.org  cube_pipeline_cache
src/: README.org  main.rs  renderer.rs
src/cameras/: camera_proj3.rs  mod.rs
src/entities/: cube.rs  mod.rs  triangle.rs
src/pipelines/: pipeline.rs
src/shaders/: shader.vert  vert.spv
