[package]
name = "gfx-cube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl"]
dx11 = ["gfx-backend-dx11"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]
unstable = []


[dependencies]
image = "0.23.14"
log = "0.4.14"
gfx-hal = "0.9.0"
gfx-auxil = "0.10.0"
gfx-backend-empty = "0.9.0"
winit = { version = "0.25.0", features = ["web-sys"] }
nalgebra = "0.29.0"
chrono = "0.4.19"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.9.0"
glsl-to-spirv = "0.1.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.78"
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.55"
features = [ "console", "Document", "Element", "HtmlElement", "Node", "Window" ]

[dependencies.gfx-backend-vulkan]
version = "0.9.0"
optional = true

[target.'cfg(all(unix, not(target_os = "ios"), not(target_os = "macos"), not(target_os = "android")))'.dependencies.gfx-backend-gl]
version = "0.9.0"
features = ["cross"]
optional = true

[target.'cfg(all(target_arch = "wasm32"))'.dependencies.gfx-backend-gl]
version = "0.9.0"
optional = true

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.gfx-backend-metal]
features = ["cross"]
version = "0.9.1"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx11]
version = "0.9.0"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.9.1"
optional = true
